--- a/src/components/Sidebar/SidebarOption/SidebarOption.scss
+++ b/src/components/Sidebar/SidebarOption/SidebarOption.scss
@@ -24,5 +24,10 @@
       margin-bottom: 10px;
       border: 1px solid #49274b;
     }
+
+    h6 {
+        padding: 10px 0px 1px 10px;
+        font-weight: 300;
+    }
   }
 }
