--- a/src/components/Headers/HeaderSearch/HeaderSearch.scss
+++ b/src/components/Headers/HeaderSearch/HeaderSearch.scss
@@ -1,12 +1,12 @@
 .HeaderSearch {
     &__container {
-        flex: 0.4;
+        flex: 0.5;
         opacity: 1;
         border-radius: 6px;
         border-color: #421f44;
         text-align: center;
         display: flex;
-        padding: 0 50px;
+        padding: 5px 50px;
         color: gray;
         border: 1px gray solid;
     }
