--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -1,22 +1,24 @@
 .Chat {
-    &__container {
-        flex: 0.7;
-        flex-grow: 1;
-        overflow-y: scroll;
-        margin-top: 50px;
-    }
+  &__container {
+    flex: 0.7;
+    flex-grow: 1;
+    overflow-y: scroll;
+    margin-top: 50px;
+  }
 
-    &__Header {
-        display: flex;
-        justify-content:  space-between;
-        padding: 20px;
-        border-bottom: 1px solid lightgray;                   ;
-    }
+  &__Header {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    border-bottom: 1px solid lightgray;
+  }
 
-    &__HeaderRight {
-        margin-right: 5px !important;
-        font-size: 14px;
-    }
+  &__HeaderRight {
+    margin-right: 5px !important;
+    font-size: 14px;
+  }
 
-
+  &__chatBottom {
+    padding-bottom: 200px;
+  }
 }
