--- a/src/components/Headers/HeaderLeft/HeaderAvatar/HeaderAvatar.scss
+++ b/src/components/Headers/HeaderLeft/HeaderAvatar/HeaderAvatar.scss
@@ -1,23 +1,23 @@
-.HeaderAvatar{
-    &__container {
-        flex: 0.3;
-        display: flex;
-        align-items: center;
-        margin-left: 20px;
+.HeaderAvatar {
+  &__container {
+    flex: 0.3;
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+  }
+
+  &__avatar {
+    cursor: pointer;
+    height: 32px;
+    width: 35px;
+    border-radius: 50%;
+
+    :hover {
+      opacity: 0.8;
     }
+  }
 
-    &__avatar {
-        cursor: pointer;
-
-        :hover {
-            opacity: 0.8;
-        }
-    }
-
-
-
-    &__clockIcon {
-        margin-left: 10rem;
-    }
-
+  &__clockIcon {
+    margin-left: 10rem;
+  }
 }
