Added spiner, Added packged

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,28 @@
 .App {
-    &__appBody {
-        display: flex;
-        height: 100vh;
-    }
+  &__appBody {
+    display: flex;
+    height: 100vh;
+  }
+}
+
+.AppLoadingContents {
+  text-align: center;
+  padding-bottom: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    height: 100px;
+    padding: 20px;
+    margin-bottom: 40px;
+  }
+}
+
+.AppLoading {
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  width: 100%;
 }
