--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -7,12 +7,11 @@
   }
 
   &__innerContainer {
-
     padding: 100px;
     text-align: center;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
     img {
       object-fit: contain;
@@ -21,12 +20,12 @@
     }
 
     button {
-        margin-top: 50px;
-        text-transform: inherit !important;
-        background-color: #0a8d48 !important;
-        color: white;
-        padding: 1rem;
-        cursor: pointer;
+      margin-top: 50px;
+      text-transform: inherit !important;
+      background-color: #0a8d48 !important;
+      color: white;
+      padding: 1rem;
+      cursor: pointer;
     }
   }
 }
